Some basic Styles and html

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,8 +2,11 @@
 <html>
 <head>
     <title>Language Detector</title>
+    <link rel="stylesheet" href="static\styles.css">
+
 </head>
 <body>
+    <h1>Speak Seek: By Ethan Huynh</h1>
     <h2>Language Detector</h2>
     <form action="/predict" method="post">
         <textarea name="text" rows="4" cols="50" placeholder="Enter text here..."></textarea><br><br>
