--- a/static/styles.css
+++ b/static/styles.css
@@ -1,64 +1,89 @@
-/* Reset some default styles for browsers */
-body, h2, h3, form {
+/* Resetting some default browser styles */
+* {
     margin: 0;
     padding: 0;
-    font-family: 'Arial', sans-serif;
+    box-sizing: border-box;
 }
 
 body {
-    background-color: #f7f7f7;
+    font-family: 'Arial', sans-serif;
+    background-color: #f4f4f4;
     color: #333;
-    font-size: 16px;
     line-height: 1.6;
+    padding: 20px;
 }
 
 .container {
-    max-width: 800px;
-    margin: 2em auto;
-    padding: 1em;
+    max-width: 600px;
+    margin: 20px auto;
+    padding: 20px;
     background-color: #fff;
+    border-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
-h2 {
-    text-align: center;
-    margin-bottom: 1em;
-    color: #555;
+.project-intro, .project-details, footer {
+    max-width: 800px;
+    margin: 20px auto;
+    padding: 20px;
+    background-color: #fff;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+h1, h2, h3 {
+    margin-bottom: 10px;
+}
+
+p {
+    margin-bottom: 20px;
 }
 
 textarea {
     width: 100%;
-    padding: 0.5em;
-    font-size: 1em;
-    margin-bottom: 1em;
-    border: 1px solid #ddd;
+    padding: 10px;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+    margin-bottom: 20px;
+    resize: vertical;
 }
 
 input[type="submit"] {
     display: block;
-    background-color: #007BFF;
+    width: 100%;
+    padding: 10px;
+    background-color: #333;
     color: #fff;
     border: none;
-    padding: 10px 15px;
+    border-radius: 5px;
     cursor: pointer;
-    width: 100%;
-    border-radius: 4px;
-    font-size: 1em;
     transition: background-color 0.3s ease;
 }
 
 input[type="submit"]:hover {
-    background-color: #0056b3;
+    background-color: #555;
 }
 
-h3 {
-    text-align: center;
-    margin-top: 1em;
-    color: #007BFF;
+ul {
+    list-style-type: none;
 }
 
-@media (max-width: 480px) {
-    .container {
-        margin: 1em;
+footer li {
+    margin-bottom: 10px;
+}
+
+footer a {
+    text-decoration: none;
+    color: #0077cc;
+    transition: color 0.3s ease;
+}
+
+footer a:hover {
+    color: #0055aa;
+}
+
+@media (max-width: 600px) {
+    body {
+        padding: 10px;
     }
 }
