--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,7 @@
 <!-- Project Title and Description -->
 <section class="project-intro">
     <h1>SpeakSeek</h1>
+    <h6>Ethan Huynh, Carleton University</h6>
     <p>A modern language detection tool built using advanced machine learning techniques.</p>
 </section>
 
