--- a/static/styles.css
+++ b/static/styles.css
@@ -31,8 +31,16 @@ body {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
-h1, h2, h3 {
+h1, h2, h3, h4, h5, h6{
     margin-bottom: 10px;
+}
+
+h1 {
+    margin-bottom: 5px;
+}
+
+h6 {
+    margin-top: 0px;
 }
 
 p {
