added subtitle for supported languages

--- a/templates/index.html
+++ b/templates/index.html
@@ -16,6 +16,7 @@
     <!-- Language Detector Tool -->
     <section class="container">
         <h2>Try the Language Detector</h2>
+        <h5>Try typing in any of these languages: English, French, Spanish or Portugese</h5>
         <form id="userInput" action="/predict" method="post">
             <div id="textAreaContainer">
                 <textarea id="textArea" name="text" rows="5" cols="50" placeholder="Enter text here..."></textarea>
