--- a/templates/index.html
+++ b/templates/index.html
@@ -18,13 +18,22 @@
         <h2>Try the Language Detector</h2>
         <h5>Try typing in any of these languages: English, French, Spanish or Portugese</h5>
         <form id="userInput" action="/predict" method="post">
+            <div id="presetSelectContainer">
+                <label for="presetSelect">Not sure what to put, choose a random quote: </label>
+                <select id="presetSelect">
+                    <option value="" disabled selected>Select Language</option>
+                    <option value="en">English</option>
+                    <option value="fr">French</option>
+                    <option value="es">Spanish</option>
+                    <option value="pt">Portuguese</option>
+                </select>
+            </div>
             <div id="textAreaContainer">
                 <textarea id="textArea" name="text" rows="5" cols="50" placeholder="Enter text here..."></textarea>
             </div>
             <input id="submitButton" type="submit" value="Predict Language" disabled>
-            
-       
         </form>
+        
         {% if prediction %}
         <h3>Predicted Language: {{ prediction }}</h3>
         {% endif %}
@@ -38,7 +47,7 @@
         <ul>
             <li>Python</li>
             <li>Scikit-learn</li>
-            <li>pandas</li>
+            <li>Pandas</li>
             <li>Flask</li>
             <!-- Add more technologies if required -->
         </ul>
